monitoring/helm/kube-prometheus/oauth2-proxy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      # Populate the arguments below. To generate a cookie-secret use: "python -c 'import os,base64; print base64.b64encode(os.urandom(16))'"
      containers:
      - args:
        - --provider=github
        - --github-org=<org_name>
        - --github-team=<team_name>
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --client-id=<GitHub_Client_ID>
        - --client-secret=<GitHub_Client_Secret>
        - --cookie-secret=<shared_secret>
        - --redirect-url=<https://host.cluster.example.io/oauth2>
        # Register a new application
        # https://github.com/settings/applications/new
        image: docker.io/machinedata/oauth2_proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
