monitoring/helm/kube-prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-auth-oauth2
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    "nginx.ingress.kubernetes.io/auth-url": "https://$host/oauth2/auth"
    "nginx.ingress.kubernetes.io/auth-signin": "https://$host/oauth2/start"
spec:
  rules:
  - host: prometheus.apps.cloud-platform-test-1.k8s.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: kube-prometheus
          servicePort: 9090
        path: /

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: monitoring
spec:
  rules:
  - host: prometheus.apps.cloud-platform-test-1.k8s.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - prometheus.apps.cloud-platform-test-1.k8s.integration.dsd.io
